--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
     "extends": "next/core-web-vitals",
     "rules": {
-      "@next/next/no-img-element": "warn"
+      "@typescript-eslint/no-unused-vars": "off",
+      "react-hooks/exhaustive-deps": "off",
+      "@next/next/no-img-element": "off"
     }
   }
