--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.56.0",
     "axios": "^1.8.4",
-    "next": "15.2.4",
+    "next": "^15.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-tabs": "^6.1.0"
